@@ -1,3 +1,12 @@
+2025-10-06T00:54:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18266910837 # 788
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-06
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 197 264 / 200 267
+* notice: next accum: outdated-unq outdated-all / unq all: 198 265 / 200 267
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-09-21] / []
+
 2025-10-05T00:58:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18251774566 # 787
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-05
